<resources>
    <string name="app_name">Foody</string>

    <!--Region Menu -->
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="search">Search</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
    <!--End Region -->

    <!--Region Details -->
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="recipe_saved">Recipe saved.</string>
    <string name="recipe_removed">Removed from Favorites.</string>
    <string name="okay">Okay</string>
    <!--End Region -->

    <!--Region Fragment Recipes -->
    <string name="floating_action_button">Floating action button</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_point">No Internet Connection.</string>
    <string name="error_image_description">Error Image</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_text">Recipe Text</string>
    <string name="recipe_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="number">100</string>
    <string name="vegan_text">Vegan</string>
    <string name="likes_description">Likes</string>
    <string name="clock_description">Clock</string>
    <string name="back_online">We\'re back online.</string>
    <!-- End Region -->

    <!--Region Error Messages-->
    <string name="error">Error</string>
    <string name="timeout">Timeout</string>
    <string name="api_key_limited">API Key Limited</string>
    <string name="recipes_not_found">Recipes Not Found</string>
    <!--End Region-->

    <!--Region Recipes Bottomsheet-->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole360">Whole360</string>
    <string name="apply">Apply</string>
    <!--End Region-->

    <!-- Region Overview Fragment -->
    <string name="title">Title</string>
    <string name="checkmark">Checkmark</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <!-- End Region -->

    <!--Region Ingredients Fragment -->
    <string name="name">Name</string>
    <string name="grams">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <!--End Region -->

    <!-- Region Favorite Recipes -->
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="one_item_selected">1 item selected</string>
    <string name="many_items_selected">%1s items selected</string>
    <string name="recipes_removed">%1s Recipes Removed.</string>
    <string name="all_recipes_removed">All recipes removed.</string>
    <!-- End Region -->

    <!-- Region Food Joke Fragment -->
    <string name="loading">Loading</string>
    <string name="text_plain">text/plain</string>
    <!-- End Region -->

</resources>