<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="com.example.foodapp.models.Result" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipesRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/recipes_imageView"
                    loadImageFromUrl="@{result.image}"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/title_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/courgette"
                    android:maxLines="2"
                    android:text="@{result.title}"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/recipes_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{result.summary}"
                    android:textColor="@color/darkGray"
                    app:layout_constraintEnd_toEndOf="@+id/title_textView"
                    app:layout_constraintStart_toStartOf="@+id/title_textView"
                    app:layout_constraintTop_toBottomOf="@+id/title_textView" />

                <ImageView
                    android:id="@+id/likes_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/likes_description"
                    android:src="@drawable/ic_heart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/likes_textView"
                    app:layout_constraintStart_toStartOf="@+id/likes_textView"
                    app:layout_constraintTop_toBottomOf="@+id/description_textView"
                    app:layout_constraintVertical_bias="0.0"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/likes_textView"
                    setNumberOfLikes="@{result.aggregateLikes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/description_textView"
                    app:layout_constraintTop_toBottomOf="@+id/likes_imageView" />

                <ImageView
                    android:id="@+id/clock_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/clock_description"
                    android:src="@drawable/ic_clock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/clock_textView"
                    app:layout_constraintStart_toStartOf="@+id/clock_textView"
                    app:layout_constraintTop_toBottomOf="@+id/description_textView"
                    app:layout_constraintTop_toTopOf="@+id/likes_imageView"
                    app:layout_constraintVertical_bias="0.0"
                    app:tint="@color/yellow" />

                <TextView
                    android:id="@+id/clock_textView"
                    setNumberOfMinutes="@{result.readyInMinutes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/number"
                    android:textColor="@color/yellow"
                    app:layout_constraintStart_toEndOf="@id/likes_textView"
                    app:layout_constraintTop_toBottomOf="@+id/clock_imageView" />

                <ImageView
                    android:id="@+id/vegan_imageView"
                    applyVeganColor="@{result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/vegan_text"
                    android:src="@drawable/ic_leaf"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/vegan_textView"
                    app:layout_constraintStart_toStartOf="@+id/vegan_textView"
                    app:layout_constraintTop_toBottomOf="@+id/description_textView"
                    app:layout_constraintTop_toTopOf="@+id/clock_imageView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/vegan_textView"
                    applyVeganColor="@{result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/vegan_text"
                    app:layout_constraintStart_toEndOf="@id/clock_textView"
                    app:layout_constraintTop_toBottomOf="@+id/vegan_imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>