<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favoritesEntity"
            type="com.example.foodapp.data.database.entities.FavoritesEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favoriteRecipesRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/favorite_row_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardBackgroundColor">

                <ImageView
                    android:id="@+id/favorite_recipes_imageView"
                    loadImageFromUrl="@{favoritesEntity.result.image}"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/favorite_title_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/courgette"
                    android:maxLines="2"
                    android:text="@{favoritesEntity.result.title}"
                    android:textColor="@color/titleColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/favorite_recipes_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/favorite_description_textView"
                    parseHtml="@{favoritesEntity.result.summary}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/descriptionColor"
                    app:layout_constraintEnd_toEndOf="@+id/favorite_title_textView"
                    app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_title_textView" />

                <ImageView
                    android:id="@+id/favorite_likes_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/likes_description"
                    android:src="@drawable/ic_heart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/favorite_likes_textView"
                    app:layout_constraintStart_toStartOf="@+id/favorite_likes_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
                    app:layout_constraintVertical_bias="0.0"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/favorite_likes_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(favoritesEntity.result.aggregateLikes)}"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/favorite_description_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_likes_imageView"
                    tools:text="@string/number"/>

                <ImageView
                    android:id="@+id/favorite_clock_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/clock_description"
                    android:src="@drawable/ic_clock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/favorite_clock_textView"
                    app:layout_constraintStart_toStartOf="@+id/favorite_clock_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
                    app:layout_constraintTop_toTopOf="@+id/favorite_likes_imageView"
                    app:layout_constraintVertical_bias="0.0"
                    app:tint="@color/yellow" />

                <TextView
                    android:id="@+id/favorite_clock_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@{String.valueOf(favoritesEntity.result.readyInMinutes)}"
                    android:textColor="@color/yellow"
                    app:layout_constraintStart_toEndOf="@id/favorite_likes_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_clock_imageView"
                    tools:text="@string/number"/>

                <ImageView
                    android:id="@+id/favorite_vegan_imageView"
                    applyVeganColor="@{favoritesEntity.result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/vegan_text"
                    android:src="@drawable/ic_leaf"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/favorite_vegan_textView"
                    app:layout_constraintStart_toStartOf="@+id/favorite_vegan_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
                    app:layout_constraintTop_toTopOf="@+id/favorite_clock_imageView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/favorite_vegan_textView"
                    applyVeganColor="@{favoritesEntity.result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/vegan_text"
                    app:layout_constraintStart_toEndOf="@id/favorite_clock_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_vegan_imageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>